<resources>
    <string name="app_name">QMoves</string>
    <string name="error_loading_lines">Error loading the lines of transport.</string>
    <string name="error_loading_stops">Line has no stops!</string>
    <string name="stops_list">List</string>
    <string name="stops_map">Route</string>
    <string name="cd_stops_list">List of stops</string>
    <string name="cd_stops_map">Line route</string>
    <string name="error_update_remote">Error updating transit information</string>
    <string name="update_successful">Transit info updated successfully</string>
    <string name="error_loading_route">Error loading the route of the line</string>
    <string name="cd_transport_icon">Transport icon</string>
    <string name="cd_transport_name">Transport name</string>
    <string name="error_loading_favorites">Error loading favorites!</string>
    <string name="menu_favorites_name">Favorites</string>
    <string name="cd_favorite_button">Favorite selector</string>
    <string name="favorite_removed">Stop removed from favorites</string>
    <string name="favorite_added">Stop added to favorites</string>
    <string name="stop_detail_time">Time</string>
    <string name="stop_detail_map">Location</string>
    <string name="stop_detail_timetable">Timetable</string>
    <string name="cd_stop_detail_time">Time for next transports</string>
    <string name="cd_stop_detail_timetable">Stop timetable</string>
    <string name="cd_stop_detail_map">Stop location</string>
    <string name="cd_arrival_time">Arrival time</string>
    <string name="cd_arrival_line">Line number</string>
    <string name="arrival_time_unit">min</string>
    <string name="cd_realtime_progress_indicator">Realtime progress indicator</string>
</resources>
