<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="nextTransport"
            type="com.quoders.apps.qmoves.realTime.model.StopNextTransport" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/grid_cell_vertical_padding"
        android:layout_marginBottom="@dimen/list_row_vertical_padding">

        <TextView
            android:id="@+id/arrival_line_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_arrival_line"
            android:text="@{nextTransport.lineId}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="17" />

        <TextView
            android:id="@+id/arrival_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_arrival_time"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:text="@{nextTransport.minutesToArrival}"
            android:textAlignment="viewEnd"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/arrival_line_text"
            app:layout_constraintStart_toStartOf="@+id/arrival_line_text"
            app:layout_constraintTop_toBottomOf="@+id/arrival_line_text"
            app:layout_constraintVertical_bias="0.0"
            tools:text="12" />

        <TextView
            android:id="@+id/arrival_time_unit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/cd_arrival_line"
            android:text="@string/arrival_time_unit"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/arrival_time_text"
            app:layout_constraintStart_toEndOf="@+id/arrival_time_text"
            app:layout_constraintTop_toTopOf="@+id/arrival_time_text"
            app:layout_constraintVertical_bias="1.0"
            tools:text="min" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>